# AIF-C01-Knowledge

./: .gitignore  README.md
AIF-C01-Knowledge/: README.md
AIF-C01-Knowledge/wiki/: README.md
AIF-C01-Knowledge/wiki/enrichment/: security-governance.md
AIF-C01-Knowledge/wiki/parts/: part-01.md  part-04.md  part-05.md  part-07.md
exam-trainer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
exam-trainer/data/: manifest.json  sections.json
exam-trainer/scripts/: assemble-pool.mjs  build-docs.mjs  build-exams.mjs  extract-sections.mjs  generate-pool.workflow.mjs  parse-original.mjs
exam-trainer/server/: .env.example  README.md  app.py  ingest.py  rag.py  requirements.txt  run.sh
exam-trainer/src/: App.tsx  styles.css  types.ts
exam-trainer/src/data/: docs.json  pool.json  (+2 more)
rag-service/: .env.example  .gitignore  API_CONTRACT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  wikis.yaml
rag-service/evals/: eval_items.json  run_evals.py
rag-service/rag_service/: __init__.py  app.py  azure.py  config.py  cost.py  graph.py  ingest.py  store.py  tracing.py
rag-service/tests/: conftest.py  test_api.py  test_chunking.py  test_confidence.py
wiki/: GAP-ANALYSIS.md  INDEX.md  PROGRESS.md  README.md
wiki/enrichment/: business-responsible-framing.md  managed-ai-services.md  security-governance.md
wiki/parts/: part-00.md  part-02.md  part-03.md  part-04.md  part-05.md  part-06.md  part-07.md  part-08.md  part-09.md
wiki/practice-questions/: README.md  d1.md  d2.md  d3.md  d4.md  d5.md
(+17 files in other folders)
