[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "1.0.0"
description = "Wiki-agnostic, production-grade Retrieval-Augmented Generation backend (FastAPI + LangGraph + Azure OpenAI + Chroma)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.2.40,<0.3",
    "langchain-openai>=0.2.10,<0.3",
    "langchain-chroma>=0.1.4,<0.2",
    "langsmith>=0.1.140",
    "chromadb>=0.5.5,<0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
rag-ingest = "rag_service.ingest:main"

[tool.setuptools.packages.find]
include = ["rag_service*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
